V4.1.2 (in progress)
[BUG] : Correct bugs numbers: 1860, 1861, 1837 (see http://www.automne-cms.org/bug/)
[REFACTOR] : Update upload file whitelist
[REFACTOR] : Change session token max age from 600  to 1800 seconds
[REFACTOR] : Update phpMyAdmin to version 3.3.10
[FEATURE] : Add logs for all actions done on polymod objects which are not subject to validation
[FEATURE] : Add direct access to rows and templates help links in side panel
[FEATURE] : Add website specific 403 and 404 pages
[FEATURE] : Allow combo search in categories selection in polymod edition
[FEATURE] : Allow combo search in users/groups selection in polymod edition
[FEATURE] : Allow combo search in subobjects selection in polymod edition
[FEATURE] : Add timestamp var to polymod date fields
[FEATURE] : Add a check on .htaccess files support

V4.1.1 (08/03/2011)
[BUG] : Correct bugs numbers: 1742, 1746, 1715, 1753, 1757, 1758 (see http://www.automne-cms.org/bug/)
[REFACTOR] : Update JSMin to last version available
[REFACTOR] : Review all uploading files methods to comply with security consideration
[FEATURE] : Add publish and unpublish tools to pages and polymod primary resource objects

V4.1.0 (24/02/2011)
[BUG] : Correct bugs numbers: 1432, 1412, 1410, 1432, 1430, 1389, 1380, 1362, 1315, 1243, 1209, 1062, 522, 883, 539, 930, 536, 535, 519, 293 (see http://www.automne-cms.org/bug/)
[REFACTOR] : Change max execution time for scripts. Set to 2 minutes by default
[REFACTOR] : Change polymod search to add one by one result return. Use POLYMOD_SEARCH_RETURN_INDIVIDUALS_OBJECTS search method with getNextResult method. This greatly improves the memory management.
[REFACTOR] : Manage alpha transparency on PNG and GIF images during image resizing
[REFACTOR] : Move /automne_linx_files directory to /automne/linx
[REFACTOR] : Move /automne_modules_files to /files
[REFACTOR] : Move /automne_bin to /automne/bin
[REFACTOR] : Move /sql to /automne/sql
[REFACTOR] : Move /html to /automne/html