@@ -3,6 +3,7 @@ V4.1.2 (in progress)
 [REFACTOR] : Update upload file whitelist
 [REFACTOR] : Change session token max age from 600  to 1800 seconds
 [REFACTOR] : Update phpMyAdmin to version 3.3.10
+[REFACTOR] : Add links to access users / groups properties from all users/groups management listing
 [FEATURE] : Add logs for all actions done on polymod objects which are not subject to validation
 [FEATURE] : Add direct access to rows and templates help links in side panel
 [FEATURE] : Add website specific 403 and 404 pages
